tests/language_modules/09_statements/valid/while_statement.vf
module WhileStatement

procedure main()
is
    let amount: Integer = 3
    while amount > 0
        invariant amount >= 0
        variant amount
    do
        amount := amount - 1
    end while
    check amount = 0
end main

end WhileStatement